// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`main elements match recorded snapshots Section Button renders the title 1`] = `
<button
  className=" text-3xl font-thin hover:scale-105 sm:text-4xl"
  onClick={[Function]}
>
  test
</button>
`;

exports[`main elements match recorded snapshots ShowTextItem renders 1`] = `
<li
  className="relative mb-3 w-24 min-w-fit cursor-pointer text-lg hover:scale-105"
>
  <button
    onClick={[Function]}
  >
    tests
  </button>
  <span
    className="styled-vertical-line absolute -bottom-1 left-0 h-px px-11"
  />
</li>
`;

exports[`main elements match recorded snapshots SmallToprightBorder renders 1`] = `
<div
  className="top-left-border"
/>
`;
